# ms-transaction-api/src/models/request/create-transation.request.ts
@@ -1,0 +1,6 @@
+export interface ICreateTransactionRequest {
+  accountExternalIdDebit: string;
+  accountExternalIdCredit: string;
+  tranferTypeId: number;
+  value: number;
+}
