# ms-transaction-api/src/models/response/create-transation.response.ts
@@ -1,0 +1,3 @@
+export interface ICreateTransactionResponse {
+  operationTransactionId: string;
+}
