# ms-transaction-api/src/routes/transaction.route.ts
@@ -1,8 +1,14 @@
 import { Router } from 'express';
-import { checkExistTransaction, getTransactionDetail } from '../controllers/transaction.controller';
+import {
+  checkExistTransaction,
+  getTransactionDetail,
+  tranferFunds,
+  validateTransferData,
+} from '../controllers/transaction.controller';
 
 const router = Router();
 
-router.get('/:id/status', checkExistTransaction, getTransactionDetail);
+router.get('/:id', checkExistTransaction, getTransactionDetail);
+router.post('/', validateTransferData, tranferFunds);
 
 export default router;
